--- a/Cours1.css
+++ b/Cours1.css
@@ -1,6 +1,7 @@
 .titre{
     text-align: center;
     background-color: blue;
+    flex-direction: column;
 }
 .meilleur{
     border-color: red;
@@ -14,4 +15,15 @@
     text-align: center;
     background-color: aqua;
     
+}
+.haut{
+    background-color: aqua;
+    padding: 50px 20px 50px 20px;
+    align-content: space-between;
+    margin: auto;
+    
+
+}
+.moi{
+    text-align: center;
 }
